[DSTEW-501] - Add Claims Amendments
